--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,5 @@ chrono = { version = "0.4", features = ["serde"] }
 clap = "3.0.0-beta.1"
 serde = "1.0"
 serde_derive = "1.0"
+tera = "1.3"
 toml = "0.5"
