--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,12 @@ edition = "2018"
 anyhow = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
 clap = "3.0.0-beta.1"
+fs_extra = "1.1"
+notify = "4.0"
+pulldown-cmark = "0.7"
 serde = "1.0"
 serde_derive = "1.0"
 tera = "1.3"
+tokio = { version = "0.2", features = ["macros"] }
 toml = "0.5"
+warp = "0.2"
