--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ license = "MIT"
 readme = "README.md"
 homepage = "https://github.com/cbrewster/brewblog"
 repository = "https://github.com/cbrewster/brewblog"
-keywords = ["static site", "generator", "blog"]
+keywords = ["static", "site", "generator", "blog"]
 
 [dependencies]
 anyhow = "1.0"
