--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ notify = "4.0"
 pulldown-cmark = "0.7"
 serde = "1.0"
 serde_derive = "1.0"
+syntect = "4.1"
 tera = "1.3"
 tokio = { version = "0.2", features = ["macros"] }
 toml = "0.5"
