--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "brewblog"
 description = "Another static site generator"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["Connor Brewster <connor.brewster@eagles.oc.edu>"]
 edition = "2018"
 license = "MIT"
@@ -14,13 +14,13 @@ keywords = ["static", "site", "generator", "blog"]
 anyhow = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
 clap = "3.0.0-beta.1"
-fs_extra = { version = "1.1", default-features = false }
-notify = { version = "4.0", default-features = false }
-pulldown-cmark = { version = "0.7", default-features = false }
-serde = { version = "1.0", default-features = false }
-serde_derive = { version = "1.0", default-features = false }
+fs_extra = "1.1"
+notify = "4.0"
+pulldown-cmark = "0.7"
+serde = "1.0"
+serde_derive = "1.0"
 syntect = "4.1"
-tera = "1.3" 
+tera = "1.3"
 tokio = { version = "0.2", features = ["macros"] }
-toml = { version = "0.5", default-features = false }
-warp = { version = "0.2", default-features = false }
+toml = "0.5"
+warp = "0.2"
