--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,13 +14,13 @@ keywords = ["static", "site", "generator", "blog"]
 anyhow = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
 clap = "3.0.0-beta.1"
-fs_extra = "1.1"
-notify = "4.0"
-pulldown-cmark = "0.7"
-serde = "1.0"
-serde_derive = "1.0"
-syntect = "4.1"
+fs_extra = { version = "1.1", default-features = false }
+notify = { version = "4.0", default-features = false }
+pulldown-cmark = { version = "0.7", default-features = false }
+serde = { version = "1.0", default-features = false }
+serde_derive = { version = "1.0", default-features = false }
+syntect = { version = "4.1", default-features = false, features = ["default-fancy"] }
 tera = "1.3"
-tokio = { version = "0.2", features = ["macros"] }
-toml = "0.5"
-warp = "0.2"
+tokio = { version = "0.2", default-fearures = false, features = ["macros"] }
+toml = { version = "0.5", default-features = false }
+warp = { version = "0.2", default-features = false }
